add distance for calculateIntersections in all geometries, add tests, implement unshaded